# hakyll_blog

./: about.md  cv.md  hakyll-blog.cabal  index.md  quotes.md  site.hs
css/: default.css  syntax.css
drafts/: 2018-06-10-domain-name.md  2019-05-13-brauer-manin-obstructions.md  bezout_in_projective_space.md  blog-bike_hobo.md  blog-c++_linting_and_completion.md  blog-climbing_in_teamfight_tactics.md  blog-data_structures_and_coroutines.md  blog-testing_a_game_server.md  galois_cohomology.md  hilbert_90.md  movie_review-palm_springs.md  movie_review-whisper_of_the_heart.md  vakil.md
notes/: eisenbud_harris.md  fulton.md  gille_szamuely.md  hartshorne.md  neukirch.md
pages/: fulton_1-1.md  fulton_1-10.md  fulton_1-2.md  fulton_1-3.md  fulton_1-4.md  fulton_1-5.md  fulton_1-6.md  fulton_1-7.md  fulton_1-8.md  fulton_1-9.md  fulton_1-lemmas.md  fulton_2-1.md  fulton_2-10.md  fulton_2-11.md  fulton_2-2.md  fulton_2-3.md  fulton_2-4.md  fulton_2-5.md  fulton_2-6.md  fulton_2-7.md  fulton_2-8.md  fulton_2-9.md  fulton_2-lemmas.md  hartshorne_II-1.md  hartshorne_II-2.md  ms_research.md  msc_summary.md
posts/: 2015-08-12-spqr.md  2018-06-15-path-3-coloring-plane-graphs.md  2018-06-22-applying-to-grad-school.md  2018-12-02-belyis-theorem.md  2018-12-11-very-ample-divisors-on-curves.md  2019-05-13-brauer-manin-obstructions.md  basic_facts_about_matrix_algebras.md  belyis_theorem.md  blog-birthday-gps.md  blog-emscripten_c_applications.md  blog-in_defense_of_anytype.md  blog-static_linking.md  blog-testing_a_game_server.md  blog-timing-functions.md  blog-turn_based_js_game.md  (+10 more)
(+4 files in other folders)
