name:               hakyll-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , latex-formulae-image == 0.1.*
                  , latex-formulae-pandoc == 0.*
                  , latex-formulae-hakyll == 0.2.*
                  , pandoc-types == 1.*
  ghc-options:      -threaded -dynamic
  default-language: Haskell2010
