name:               hakyll-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.*
                  , pandoc == 2.*
                  , pandoc-types == 1.*
  ghc-options:      -threaded -dynamic
  default-language: Haskell2010
