name:               hakyll-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , containers == 0.6.5.1
                  , hakyll == 4.16.2.*
                  , pandoc == 3.1.8
                  , pandoc-types == 1.*
                  , skylighting == 0.14
                  , skylighting-core == 0.14
  ghc-options:      -threaded -dynamic
  default-language: Haskell2010
